@@ -1959,6 +1959,7 @@ GEN     nfdiv(GEN nf, GEN x, GEN y);
 GEN     nfdiveuc(GEN nf, GEN a, GEN b);
 GEN     nfdivrem(GEN nf, GEN a, GEN b);
 GEN     nfembed(GEN nf, GEN x, long k);
+GEN     nfeltsign(GEN nf, GEN x, GEN ind0);
 GEN     nfinv(GEN nf, GEN x);
 GEN     nfinvmodideal(GEN nf, GEN x, GEN ideal);
 GEN     nfM_det(GEN nf, GEN M);
