@@ -42,6 +42,7 @@ BA    8- new GP function elltamagawa
 BA   10- [libpari] Flx_digits/FlxV_Flx_fromdigits
      11- new argument (multiple derivation) in GP function derivnum
      12- allow matrix(n) for n x n matrices
+     13- new GP function nfeltsign
 
   Changed
       1- rewrite bnfnarrow
